--- a/foryou/Flower_DekaTutorial.html
+++ b/foryou/Flower_DekaTutorial.html
@@ -19,8 +19,12 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `hi pookie
+      thank you for coming into my life, whatever the end, it's a pleasure to know and love you
+      i just hope you are always happy wherever, whenever and with whoever. may Allah always protect your smile and heart, i am a person who is always happy to see you well and always proud of you
+      i hope you know how much i love you, also i hope you don't love another women :(
+      i'll always love you until i see you love someone else`;
+      musik = `ssstik.io_1734824463388.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
